6782232: assert("CreateEx must be first instruction in block" )

Add the missing check for CreateEx. Add new notproduct flag VerifyRegisterAllocator.

Reviewed-by: never